# IRIS-workflow

./: .editorconfig  .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/desktop/: README.md  pubspec.yaml
apps/desktop/test/: widget_test.dart
apps/desktop/windows/: CMakeLists.txt
apps/desktop/windows/runner/: Runner.rc  main.cpp
apps/host-backend/: Cargo.toml  README.md
apps/host-backend/example-workflows/: hello-world.yaml  widget-flow.yaml
apps/host-backend/migrations/: 20260521120000_init.sql  20260521130000_executions.sql
apps/host-backend/src/: config.rs  error.rs  lib.rs  main.rs  state.rs  telemetry.rs
apps/host-backend/src/ai/: mod.rs  permission.rs  process.rs  service.rs  stream.rs
apps/host-backend/src/api/: ai.rs  devices.rs  executions.rs  health.rs  mod.rs  notifications.rs  permission.rs  sdui.rs  webhooks.rs  widgets.rs  workflows.rs  ws.rs
apps/host-backend/src/delivery/: event.rs  hub.rs  mod.rs
apps/host-backend/src/domain/: device.rs  mod.rs  notification.rs  sdui.rs  target.rs  widget.rs
apps/host-backend/src/mqtt/: mod.rs
apps/host-backend/src/storage/: devices.rs  executions.rs  memory.rs  mod.rs  postgres.rs  sdui.rs  widgets.rs
apps/host-backend/src/triggers/: mod.rs
apps/host-backend/src/workflow/: dag.rs  dsl.rs  executor.rs  loader.rs  mod.rs  store.rs  template.rs
apps/iris-mcp-permission/: Cargo.toml  README.md
apps/iris-mcp-permission/src/: main.rs
apps/mobile/: README.md  pubspec.yaml
apps/mobile/ios/: WIDGET_SETUP.md
apps/mobile/ios/IRISWidget/: IRISWidget.entitlements  IRISWidget.swift
apps/mobile/ios/Runner/: AppDelegate.swift  IRISWidgetBridge.swift  Runner.entitlements
apps/mobile/ios/Runner.xcodeproj/: project.pbxproj
apps/mobile/lib/: main.dart
apps/mobile/lib/api/: client.dart  types.dart  ws.dart
apps/mobile/lib/ios_widget/: widget_bridge.dart
apps/mobile/lib/screens/: events.dart  executions.dart  home.dart  settings.dart  workflows.dart
apps/mobile/lib/state/: providers.dart
apps/mobile/test/: widget_test.dart
apps/web-console/: README.md  package.json
apps/web-console/src/app/: layout.tsx  providers.tsx
apps/web-console/src/components/: PageHeader.tsx  Sidebar.tsx  StatusBadge.tsx
docs/: README.md
docs/concept/: 00-overview.md  01-vision.md  02-architecture.md  03-host-model.md  04-claude-code-bridge.md  05-workflow-dsl.md  06-server-driven-ui.md  07-devices-and-widgets.md
docs/diagrams/: README.md  infrastructure.drawio  workflow-execution.drawio
docs/plans/: implementation-plan.xlsx  roadmap.md
infra/docker/: docker-compose.yml
infra/packaging/: README.md
infra/packaging/macos-pkg/: README.md
infra/packaging/windows-msix/: README.md
infra/tailscale/: README.md
scripts/: _helpers.mjs  build-desktop-msix.ps1  dev-host.ps1  format-all.ps1  gen-plan.mjs  test-p2.mjs  test-p3-4.mjs  test-p3-full.mjs  test-p8.mjs  test-workflow.mjs  test-ws.mjs
(+8 files in other folders)
